# simple-conversational-chatbot

./: .gitignore  README.md  pyproject.toml
src/simple_conversational_chatbot/: history.json  instant.py  instant_langchain.py  main.py  utils.py
